Update to gradle-8.1.1